feat: add tags in handler Purchase order
